# cloning-robot

./: README.md  set.bash
src/baby/baby_control/: CMakeLists.txt  package.xml
src/baby/baby_control/config/: baby_control.yaml
src/baby/baby_control/launch/: baby_control.launch  baby_rqt.launch  baby_rqt.perspective
src/baby/baby_description/: CMakeLists.txt  package.xml
src/baby/baby_description/urdf/: baby.gazebo  baby.xacro
src/baby/baby_description/urdf/baby/: backup.gazebo  backup.xacro  model.config  model.sdf
src/baby/baby_gazebo/: CMakeLists.txt  bot.rviz  package.xml
src/baby/baby_gazebo/launch/: baby_world.launch
src/baby/baby_gazebo/worlds/: baby.world
src/baby/balancer/: CMakeLists.txt  package.xml
src/baby/balancer/src/: balance.cpp
src/baby/joint_controller/: CMakeLists.txt  package.xml
src/baby/joint_controller/src/: Hand_movement.cpp  Leg_movement.cpp  joint_state_publisher.cpp  trajectory.cpp
src/servo/joint_controller/: CMakeLists.txt
src/servo/joint_controller/src/: joint_state_publisher.cpp
src/servo/servo_control/config/: servo_control.yaml
src/servo/servo_control/launch/: servo_control.launch  servo_rqt.perspective
src/servo/servo_description/: package.xml
src/servo/servo_description/urdf/: materials.xacro  servo.gazebo  servo.xacro
src/servo/servo_gazebo/: package.xml
src/servo/servo_gazebo/launch/: servo_world.launch
